005 finalized sources for chapter 4